# reproduction-task-exposure

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTION.md  LICENSE  README.md  STATUS.md  convo_20260327_oldest_model_stability.md  pyproject.toml
data/extracted/: README.md  occupation_profiles.csv  onet_tasks_full_18k.csv
data/onet/: README.md
docs/active/rename-rounds/: RESEARCH_LOG.md
eloundou/: README.md  __init__.py  __main__.py  compare.py  prompt.py  runner.py
eloundou/data/: stratified_50_sample.json
eloundou/results/gpt-4-0613-full-923/: all_results.csv  comparison_report.md  sample_user_prompt.txt  system_prompt.txt
eloundou/results/gpt-4-0613-strat50-runA/: all_results.csv  comparison_report.md
eloundou/results/gpt-4-0613-strat50-runB/: all_results.csv  comparison_report.md
eloundou/results/gpt-4-turbo-2024-04-09-per-task-strat50/: all_results.csv
eloundou/results/gpt-4-turbo-per-occ-strat50/: all_results.csv  comparison_report.md
eloundou/results/gpt-5-per-occ-strat50/: all_results.csv
eloundou/results/gpt-5-per-task-strat50/: all_results.csv
eloundou/tests/: test_replication.py
results/: README.md
results/data_20260313_midtier/: consensus_cr.csv  consensus_r2.csv  disputed_cr.csv  disputed_r2.csv  run_metadata.json
results/data_oldest_available/: consensus_cr.csv  disputed_cr.csv  run_metadata.json
scripts/: aggregate.py  classify.py  compare_results.py
src/task_exposure/: __init__.py  clients.py  docs.md  parser.py  profiles.py  prompts.py  runner.py
tests/: test_round_naming.py
(+19 files in other folders)
