[project]
name = "task-exposure"
version = "0.1.0"
description = "Reproduction package for 'Measuring AI Task Exposure' — CDR classification of O*NET occupational tasks"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Daniel Parshall" },
    { name = "Andrea Lopez-Luzuriaga" },
]
dependencies = [
    "openai>=1.0",
    "anthropic>=0.18",
    "google-genai",
    "python-dotenv",
    "openpyxl",
    "tqdm",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_exposure"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests", "eloundou/tests"]
